Version 1.03.0

[changed]
- -print now only prints the information, and then stops the compiler

[added]
- Package name + version to all the new/updated bindings
- Windows API binding: strsafe.bi and windowsx.bi; COBJMACROS declarations (COM helper macros)
- Windows API binding updated to mingw-w64 4.0.1
- IUP binding updated to 3.13
- #742: fbc can now use lib64/freebasic/... instead of lib/freebasic/ if built with ENABLE_LIB64=1
- -print fblibdir option

[fixed]
- 1.02.0 regression: win/winuser.bi: Renamed INPUT typedef to INPUT_ to avoid conflicts with the quirk keyword (due to bug #730)
- 1.02.0 regression: OpenGL binding: glGetString() and some others use ZString Ptr instead of GLubyte Ptr again
- 1.02.0 regression: Windows API binding: REFIID and some other REF* types were missing; wsprintf/wvsprintf declarations were missing; ole2.bi couldn't be included directly/alone anymore.
- bindings: Various previously untranslated (or wrongly translated) #defines in SDL2, X11, crt/pthread, Windows API
- Windows API binding: DirectX headers missed some declarations and some didn't compile
- crt/string.bi, crt/mem.bi: Added CONSTs to function declarations
- #767: Illegal byref result assignments will now cause a proper error message, not just a warning


Version 1.02.0

[changed]
- Redims with explicit type will now redim existing dynamic array fields, if one of the same name exists, instead of creating a new local array. This makes Redims with explicit type match the behaviour of typeless Redims and Redims for global arrays.
- Relaxed type checking for procedure pointers and virtual method overrides: Procedures with different signatures can now be treated equal if the signatures are compatible. For example: assignments between a function pointer returning an Integer and one returning a Long won't cause a "suspicious pointer assignment" warning on 32bit anymore.